Changed reboot method after selinux disable

--- a/tasks/pre_install.yml
+++ b/tasks/pre_install.yml
@@ -16,14 +16,17 @@
   become: true
   ansible.posix.selinux:
     state: disabled
-  register: result
-  failed_when: result.msg | default('ok', True) is not search('(^ok$|libselinux-python|(SELinux state changed))')
+  register: selinuxdisabled
+  failed_when: selinuxdisabled.msg | default('ok', True) is not search('(^ok$|libselinux-python|(SELinux state changed))')
   tags: [setup]
 
 - name: Reboot server after disabling SELinux when required
   become: true
-  when: result.reboot_required
-  ansible.builtin.reboot:
+  when: selinuxdisabled is changed
+  ansible.bultin.shell: 
+    cmd: "sleep 5 && reboot"
+    async: 1
+    poll: 0
   tags: [setup]
 
 - name: Increase system limits as required by DSS
