--- a/tasks/pre_install/centos.yml
+++ b/tasks/pre_install/centos.yml
@@ -54,13 +54,14 @@
       - libgomp
       - python3-setuptools
 
-- name: Installing CentOS 7 sepecific packages
+- name: Installing CentOS 7 specific packages
   become: true
   ansible.builtin.yum:
     name: "{{ packages }}"
     state: present
   vars:
     packages:
+      - libselinux-python3
       - python3
       - python-setuptools
       - python-six
@@ -68,7 +69,7 @@
       - python-dateutil
   when: ansible_facts['os_family'] == 'RedHat' and ansible_facts ['distribution_major_version'] == '7'
 
-- name: Installing CentOS 8 sepecific packages
+- name: Installing CentOS 8 specific packages
   become: true
   ansible.builtin.yum:
     name: "{{ packages }}"
