Moved server reboot tasked as handler Removed failed_when statement associated wih the disable selinux task for testing

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -51,3 +51,8 @@
     dest: "/etc/dataiku-security/{{ dss_install_id.stdout }}/security-config.ini"
     mode: 0644
   tags: [dss]
+
+- name: Reboot server
+  become: true
+  ansible.builtin.reboot:
+  tags: [setup]
