Added python3-selinux in debian-like environments to avoid errors when disabling selinux

--- a/tasks/pre_install/debian.yml
+++ b/tasks/pre_install/debian.yml
@@ -39,6 +39,7 @@
       - python3.7 
       - python3-distutils
       - python3-pip
+      - python3-selinux
       - python3-setuptools
       - python2-minimal
       - python-dateutil
@@ -53,6 +54,7 @@
   vars:
     packages:
       - python3.6
+      - python3-selinux
   when: ansible_facts['os_family'] == 'Ubuntu' and ansible_facts ['distribution_major_version'] == '16.04'
 
 - name: Installing Ubuntu 18.04 specific packages
@@ -64,6 +66,7 @@
     packages:
       - python3.6
       - python3-distutils
+      - python3-selinux
   when: ansible_facts['os_family'] == 'Ubuntu' and ansible_facts ['distribution_major_version'] == '18.04'
 
 - name: Installing Ubuntu 20.04 specific packages
@@ -74,4 +77,5 @@
   vars:
     packages:
       - python3.7
+      - python3-selinux
   when: ansible_facts['os_family'] == 'Ubuntu' and ansible_facts ['distribution_major_version'] == '20.04'
