Moved SElinux disable as OS specific task Retrieve the list of installed packages as fact Disable SELinux if it is instelled. Ignore otherwise.

--- a/tasks/pre_install/centos.yml
+++ b/tasks/pre_install/centos.yml
@@ -83,3 +83,12 @@
       - python2-requests
       - python36 
   when: ansible_facts['os_family'] == 'RedHat' and ansible_facts ['distribution_major_version'] == '8'
+
+- name: Disable SELinux
+  become: true
+  ansible.posix.selinux:
+    state: disabled
+  register: selinuxdisabled
+  notify:
+    - Reboot server
+  tags: [setup]
