--- a/tasks/pre_install/debian.yml
+++ b/tasks/pre_install/debian.yml
@@ -82,7 +82,7 @@
 
 - name: Disable SELinux
   become: true
-  when: 'selinux-policy-default' in ansible_facts.packages
+  when: "'selinux-policy-default' in ansible_facts.packages"
   ansible.posix.selinux:
     state: disabled
   register: selinuxdisabled
