--- a/tasks/pre_install/centos.yml
+++ b/tasks/pre_install/centos.yml
@@ -61,6 +61,7 @@
     state: present
   vars:
     packages:
+      - libselinux-python
       - libselinux-python3
       - python3
       - python-setuptools
