Added correct selinux package names for Centos8

--- a/tasks/pre_install/centos.yml
+++ b/tasks/pre_install/centos.yml
@@ -78,6 +78,8 @@
   vars:
     packages:
       - ncurses-compat-libs
+      - libselinux-python
+      - python3-libselinux
       - python2
       - python2-setuptools
       - python2-six
