Disable SELinux On CentOS only if selinux-policy package is installed

--- a/tasks/pre_install/centos.yml
+++ b/tasks/pre_install/centos.yml
@@ -89,6 +89,7 @@
 
 - name: Disable SELinux
   become: true
+  when: "'selinux-policy' in ansible_facts.packages"
   ansible.posix.selinux:
     state: disabled
   register: selinuxdisabled
