--- a/tasks/pre_install/centos.yml
+++ b/tasks/pre_install/centos.yml
@@ -95,3 +95,6 @@
   notify:
     - Reboot server
   tags: [setup]
+
+- name: Flush handlers to reboot after disabling SELinux if needed
+  ansible.builtin.meta: flush_handlers
