Check if docker service is installed Add weareinteractive.docker in molecule test playbook Add a new download_dss_docker_images variable Test if docker service is installed when download_dss_docker_images=true before continuing

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -20,6 +20,7 @@ dss_network_port: 10000
 
 # Optional : add containerized execution on kubernetes capability
 configure_k8s: false
+download_dss_docker_images: false
 k8s_executionconfigs: []
 
 # Optional : add dss spark support
