--- a/.github/workflows/molecule-ci.yml
+++ b/.github/workflows/molecule-ci.yml
@@ -35,5 +35,6 @@ jobs:
           LICENSE: ${{ secrets.LICENSE }}
       - name: Test with molecule
         run: |
+          ansible-galaxy install weareinteractive.docker
           ansible-galaxy install -r requirements.yml
           molecule test --platform-name=${{ matrix.platform }} --destroy=always
