Check if docker service is installed Add weareinteractive.docker in molecule test playbook Add a new download_dss_docker_images variable Test if docker service is installed when download_dss_docker_images=true before continuing

--- a/.github/workflows/molecule-ci.yml
+++ b/.github/workflows/molecule-ci.yml
@@ -36,5 +36,6 @@ jobs:
           LICENSE: ${{ secrets.LICENSE }}
       - name: Test with molecule
         run: |
+          ansible-galaxy install weareinteractive.docker
           ansible-galaxy install -r requirements.yml
           molecule test --platform-name=${{ matrix.platform }} --destroy=always
