--- a/tasks/docker_images.yml
+++ b/tasks/docker_images.yml
@@ -19,7 +19,7 @@
     url: "{{ download_dss_docker_images_url }}"
     dest: "{{ dss_install_dir_location }}/dataiku-dss-ALL-base_dss-{{ dss_version }}-r-py3.6.tar.gz"
     mode: '644'
-  when: when: download_dss_docker_images and (result_test_docker_images.images | length < 3)
+  when: download_dss_docker_images and (result_test_docker_images.images | length < 3)
   tags: [docker-images]
 
 - name: Load all base images from archive
