--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -83,14 +83,22 @@
   tasks:
     - name: "Update Repository cache and install gnupg (required by apt-key)"
       apt:
-        name: gnupg
+        name: "{{ packages }}"
+        state: present
         update_cache: true
-        cache_valid_time: 3600
-        force_apt_get: true
+      vars:
+        packages:
+          - gnupg
+          - python3.7 
+          - python3-distutils
+          - python3-pip
+          - python3-selinux
+          - python3-setuptools
       when: ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu'
     - name: "Deploy docker"
       ansible.builtin.include_role:
         name: weareinteractive.docker
+      when: ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu'
     - name: "Test DSS install"
       ansible.builtin.include_role:
         name: "{{ lookup('env', 'MOLECULE_PROJECT_DIRECTORY') | basename }}"
