--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -7,11 +7,15 @@ platforms:
   - name: molecule-debian10
     image: docker.io/debian:buster
     pre_build_image: false
+    privileged: true
+    volumes:
+      - "/var/run/docker.sock:/var/run/docker.sock"
   - name: molecule-centos7
     image: docker.io/centos:7
     privileged: true
     volumes:
       - "/sys/fs/cgroup:/sys/fs/cgroup:rw"
+      - "/var/run/docker.sock:/var/run/docker.sock"
     command: "/usr/sbin/init"
     tty: True
     env:
@@ -23,6 +27,7 @@ platforms:
     privileged: true
     volumes:
       - "/sys/fs/cgroup:/sys/fs/cgroup:rw"
+      - "/var/run/docker.sock:/var/run/docker.sock"
     command: "/usr/sbin/init"
     tty: True
     env:
