--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -82,7 +82,7 @@
         targetHadoop: hadoop-userB
   tasks:
     - name: "Update Repository cache and install gnupg (required by apt-key)"
-      apt:
+      ansible.builtin.apt:
         name: "{{ packages }}"
         state: present
         update_cache: true
