--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -5,3 +5,14 @@
   become: true
   ansible.builtin.reboot:
   tags: [setup]
+
+- name: Regenerate DSS config
+  become: true
+  become_user: "{{ dss_service_user }}"
+  ansible.builtin.command: "{{ dss_service_user_home_basedir }}/{{ dss_service_user }}/{{ dss_datadir }}/bin/dssadmin regenerate-config"
+
+- name: Restart DSS
+  become: true
+  ansible.builtin.service:
+    name: "dataiku.{{ dss_datadir }}"
+    state: restarted
