--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -101,6 +101,7 @@
       vars:
         docker_service_enabled: false
         docker_service_state: stopped
+      tags: [molecule-idempotence-notest]
       when: ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu'
     - name: "Test DSS install"
       ansible.builtin.include_role:
