--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -5,6 +5,11 @@
     msg: Hadoop or Spark package version does not match DSS version {{ dss_version }}
   when: (configure_spark) and (dss_hadoop_package is not search(dss_version) or dss_spark_package is not search(dss_version))
 
+- name: Check docker images URL version consistency
+  ansible.builtin.fail:
+    msg: Docker images URL {{ download_dss_docker_images_url }} does not match DSS version {{ dss_version }}
+  when: (download_dss_docker_images) and (download_dss_docker_images_url is not search(dss_version))
+
 # Check if docker service is installed if docker images have to be downloaded
 - name: Populate service facts
   ansible.builtin.service_facts:
