Get loaded_images stdout for debug

--- a/tasks/docker_images.yml
+++ b/tasks/docker_images.yml
@@ -28,3 +28,6 @@
   register: loaded_images
   when: download_dss_docker_images and (result_test_docker_images.images | length < 3)
   tags: [docker-images]
+
+- ansible.buitin.debug:
+    msg: "{{loaded_images.stdout}}"
