--- a/tasks/docker_images.yml
+++ b/tasks/docker_images.yml
@@ -18,6 +18,7 @@
     url: "{{ download_dss_docker_images_url }}"
     dest: "{{ dss_install_dir_location }}/dataiku-dss-ALL-base_dss-{{ dss_version }}-r-py3.6.tar.gz"
     mode: '644'
+  register: downloaded_images_archive
   when: download_dss_docker_images and (result_test_docker_images.images | length < 3)
   tags: [docker-images]
 
@@ -26,8 +27,5 @@
   community.docker.docker_image_load:
     path: "{{ dss_install_dir_location }}/dataiku-dss-ALL-base_dss-{{ dss_version }}-r-py3.6.tar.gz"
   register: loaded_images
-  when: download_dss_docker_images and (result_test_docker_images.images | length < 3)
+  when: downloaded_images_archive.changed
   tags: [docker-images]
-
-- ansible.buitin.debug:
-    msg: "{{ loaded_images.stdout }}"
