--- a/.github/workflows/molecule-ci.yml
+++ b/.github/workflows/molecule-ci.yml
@@ -54,6 +54,7 @@ jobs:
           LICENSE: ${{ secrets.LICENSE }}
       - name: Test with molecule
         run: |
-          ansible-galaxy install weareinteractive.docker
+          ansible-galaxy install geerlingguy.docker
+          ansible-galaxy install geerlingguy.pip
           ansible-galaxy install -r requirements.yml
           molecule test --platform-name=${{ matrix.platform }} --destroy=always
