--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -14,10 +14,10 @@
 - name: Populate service facts
   ansible.builtin.service_facts:
 
-- name: Check if docker service is installed
-  ansible.builtin.fail:
-    msg: Docker service has to be installed to make this role able to build images for code environments when containerized execution is enabled.
-  when: (configure_k8s) and ('docker' not in services)
+#- name: Check if docker service is installed
+#  ansible.builtin.fail:
+#    msg: Docker service has to be installed to make this role able to build images for code environments when containerized execution is enabled.
+#  when: (configure_k8s) and ('docker' not in services)
 
 
 # Run role tasks
