--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -80,6 +80,16 @@
         ruleFrom: .*
         targetUnix: unix-userB
         targetHadoop: hadoop-userB
+  # https://www.jeffgeerling.com/blog/2020/resolving-fedora-dnf-error-no-such-file-or-directory-varlibdnfrpmdblockpid
+  pre_tasks:
+    - name: Wait for systemd to complete initialization.
+      command: systemctl is-system-running
+      register: systemctl_status
+      until: "'running' in systemctl_status.stdout"
+      retries: 30
+      delay: 5
+      when: ansible_service_mgr == 'systemd'
+      changed_when: false
   tasks:
     - name: "Update Repository cache and install gnupg (required by apt-key)"
       ansible.builtin.apt:
