--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -82,14 +82,17 @@
         targetHadoop: hadoop-userB
   # https://www.jeffgeerling.com/blog/2020/resolving-fedora-dnf-error-no-such-file-or-directory-varlibdnfrpmdblockpid
   pre_tasks:
-    - name: Wait for systemd to complete initialization.
+    - name: Wait for systemd to complete initialization.  # noqa 303
       command: systemctl is-system-running
       register: systemctl_status
-      until: "'running' in systemctl_status.stdout"
+      until: >
+        'running' in systemctl_status.stdout or
+        'degraded' in systemctl_status.stdout
       retries: 30
       delay: 5
-      when: ansible_service_mgr == 'systemd' and ansible_facts['os_family'] == 'RedHat' and ansible_facts ['distribution_major_version'] == '8'
+      when: ansible_service_mgr == 'systemd'
       changed_when: false
+      failed_when: systemctl_status.rc > 1
   tasks:
     - name: "Update Repository cache and install gnupg (required by apt-key)"
       ansible.builtin.apt:
