--- a/.github/workflows/molecule-ci.yml
+++ b/.github/workflows/molecule-ci.yml
@@ -6,6 +6,9 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '3.9'
       - name: Install dependencies
         run: |
           python3 -m pip install --upgrade pip setuptools
@@ -24,7 +27,22 @@ jobs:
       # The maximum number of jobs that can run simultaneously
       max-parallel: 1
     steps:
-      - uses: actions/checkout@v2
+      - name: Maximize build space
+        uses: easimon/maximize-build-space@v6
+        with:
+          root-reserve-mb: 4096
+          swap-size-mb: 1024
+          remove-dotnet: 'true'
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Patch Docker Daemon data-root
+        run: |
+          DOCKER_DATA_ROOT='/home/runner/work/ansible-role-dataikudss/ansible-role-dataikudss/docker'
+          DOCKER_DAEMON_JSON='/etc/docker/daemon.json'
+          sudo mkdir -p "${DOCKER_DATA_ROOT}"
+          jq --arg dataroot "${DOCKER_DATA_ROOT}" '. + {"data-root": $dataroot}' "${DOCKER_DAEMON_JSON}" > "/tmp/docker.json.tmp"
+          sudo mv "/tmp/docker.json.tmp" "${DOCKER_DAEMON_JSON}"
+          sudo systemctl restart docker
       - name: Install dependencies
         run: |
           python3 -m pip install --upgrade pip setuptools
@@ -36,5 +54,7 @@ jobs:
           LICENSE: ${{ secrets.LICENSE }}
       - name: Test with molecule
         run: |
+          ansible-galaxy install geerlingguy.docker
+          ansible-galaxy install geerlingguy.pip
           ansible-galaxy install -r requirements.yml
           molecule test --platform-name=${{ matrix.platform }} --destroy=always
