--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -151,11 +151,12 @@
   become: true
   become_user: "{{ dss_service_user }}"
   community.general.ini_file:
-    path : "{{ dss_service_user_home_basedir }}/{{ dss_service_user }}/{{ dss_datadir }}/install.ini"
+    path: "{{ dss_service_user_home_basedir }}/{{ dss_service_user }}/{{ dss_datadir }}/install.ini"
     backup: true
-    section : javaopts
+    section: javaopts
     option: backend.xmx
     value: "{{ dss_backend_xmx }}"
+    mode: 0600
   when: dss_backend_xmx is defined
   notify:
     - Regenerate DSS config
@@ -166,11 +167,12 @@
   become: true
   become_user: "{{ dss_service_user }}"
   community.general.ini_file:
-    path : "{{ dss_service_user_home_basedir }}/{{ dss_service_user }}/{{ dss_datadir }}/install.ini"
+    path: "{{ dss_service_user_home_basedir }}/{{ dss_service_user }}/{{ dss_datadir }}/install.ini"
     backup: true
-    section : javaopts
+    section: javaopts
     option: jek.xmx
     value: "{{ dss_jek_xmx }}"
+    mode: 0600
   when: dss_jek_xmx is defined
   notify:
     - Regenerate DSS config
@@ -181,11 +183,12 @@
   become: true
   become_user: "{{ dss_service_user }}"
   community.general.ini_file:
-    path : "{{ dss_service_user_home_basedir }}/{{ dss_service_user }}/{{ dss_datadir }}/install.ini"
+    path: "{{ dss_service_user_home_basedir }}/{{ dss_service_user }}/{{ dss_datadir }}/install.ini"
     backup: true
-    section : javaopts
+    section: javaopts
     option: fek.xmx
     value: "{{ dss_fek_xmx }}"
+    mode: 0600
   when: dss_fek_xmx is defined
   notify:
     - Regenerate DSS config
